--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
       <nav>
         <div class="container-header">
-          <img src="mflix-logo.svg" alt="logo MFlix" />
+          <img src="./public/mflix-logo.svg" alt="logo MFlix" />
 
           <ul>
             <li>Inicio</li>
@@ -35,7 +35,7 @@
     </div>
   </div>
 
-  <script type="module" src="/src/main.js"></script>
+  <script type="module" src="./src/main.js"></script>
 </body>
 
 </html>
