--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="./src/style.css">
+  <link rel="stylesheet" type="text/css" href="/src/style.css">
   <title>Document</title>
 </head>
 
@@ -13,7 +13,7 @@
     <header>
       <nav>
         <div class="container-header">
-          <img src="./public/mflix-logo.svg" alt="logo MFlix" />
+          <img src="mflix-logo.svg" alt="logo MFlix" />
 
           <ul>
             <li>Inicio</li>
@@ -35,7 +35,7 @@
     </div>
   </div>
 
-  <script type="module" src="./src/main.js"></script>
+  <script type="module" src="/src/main.ts"></script>
 </body>
 
 </html>
